--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,7 +46,7 @@ jobs:
           set -e -o pipefail
 
           cd deploy_temp
-          rsync -av --delete ../Egern Egern
+          rsync -av --delete ../Egern/ Egern
           git add .
           git commit -m "Update release"
           git push origin release
