--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,6 +47,7 @@ jobs:
 
           cd deploy_temp
           rsync -av --delete ../Egern/ Egern
+          rsync -av --delete ../Loon/ Loon
           git add .
           git commit -m "Update release"
           git push origin release
