--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,8 +46,7 @@ jobs:
           set -e -o pipefail
 
           cd deploy_temp
-          rsync -av --delete ../Egern/ Egern
-          rsync -av --delete ../Loon/ Loon
+          rsync -av --delete ../rule-set/ .
           git add .
           git commit -m "Update release"
           git push origin release
