--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ dependencies = [
     "pydantic>=2.8.2",
     "httpx[http2]>=0.27.0",
     "loguru>=0.7.2",
-    "pyyaml>=6.0.1",
+    "pyyaml[libyaml]>=6.0.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
