--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "httpx[http2]>=0.27.0",
     "loguru>=0.7.2",
     "pyyaml[libyaml]>=6.0.1",
+    "anytree>=2.12.1",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
