--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pyyaml[libyaml]>=6.0.1",
     "anytree>=2.12.1",
     "validators>=0.33.0",
+    "maxminddb>=2.6.2",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
