--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "anytree>=2.12.1",
     "validators>=0.33.0",
     "maxminddb>=2.6.2",
+    "protobuf>=5.27.2",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
