--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,13 +16,13 @@ jobs:
       - name: Install sing-box
         run: |
           set -e -o pipefail
-          bash <(curl -fsSL https://sing-box.app/deb-install.sh)
-      - name: Install the latest version of rye
-        uses: eifinger/setup-rye@v3
+          bash <(curl -fsSL https://sing-box.app/install.sh)
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
       - run: |
           set -e -o pipefail
-          rye sync
-          rye run rule-set
+          uv sync
+          uv run rule-set
       - name: Pre-deploy check
         run: |
           if [ -f .failure ]; then
