--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,37 +2,25 @@
 name = "rule-set"
 version = "0.1.0"
 description = "Add your description here"
-authors = [
-    { name = "KotaHv", email = "92137267+KotaHv@users.noreply.github.com" },
-]
-dependencies = [
-    "pydantic>=2.8.2",
-    "httpx[http2]>=0.27.0",
-    "loguru>=0.7.2",
-    "pyyaml[libyaml]>=6.0.1",
-    "anytree>=2.12.1",
-    "validators>=0.33.0",
-    "maxminddb>=2.6.2",
-    "protobuf>=5.27.2",
-    "tldextract>=5.1.2",
-]
 readme = "README.md"
-requires-python = ">= 3.8"
+requires-python = ">=3.12.1"
+dependencies = [
+    "anytree>=2.13.0",
+    "httpx[http2]>=0.28.1",
+    "loguru>=0.7.3",
+    "maxminddb>=2.8.2",
+    "protobuf>=6.31.1",
+    "pydantic>=2.11.7",
+    "pyyaml>=6.0.2",
+    "tldextract>=5.3.0",
+    "validators>=0.35.0",
+]
 
 [project.scripts]
-"rule-set" = "main:main"
-"logical" = "deserialize:logical.print_rule_tree"
+"rule-set" = "rule_set:main"
+"logical" = "deserialize:print_rule_tree"
+
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
-[tool.rye]
-managed = true
-dev-dependencies = []
-
-[tool.hatch.metadata]
-allow-direct-references = true
-
-[tool.hatch.build.targets.wheel]
-packages = ["src/main.py"]
+requires = ["uv_build>=0.8.8,<0.9.0"]
+build-backend = "uv_build"
