--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "maxminddb>=2.8.2",
     "protobuf>=6.31.1",
     "pydantic>=2.11.7",
+    "pygtrie>=2.5.0",
     "pyyaml>=6.0.2",
     "tldextract>=5.3.0",
     "validators>=0.35.0",
