perf: replace py-radix with pytricia for better IP trie performance

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ dependencies = [
     "loguru>=0.7.3",
     "maxminddb>=2.8.2",
     "protobuf>=6.31.1",
-    "py-radix>=0.10.0",
     "pyahocorasick>=2.2.0",
     "pydantic>=2.11.7",
     "pygtrie>=2.5.0",
+    "pytricia>=1.2.0",
     "pyyaml>=6.0.2",
     "tldextract>=5.3.0",
     "validators>=0.35.0",
