--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
 [project.scripts]
 "rule-set" = "rule_set:main"
 "logical" = "deserialize:print_rule_tree"
+"format" = "format:main"
 
 
 [build-system]
