fix: restore file timestamps in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,6 +65,10 @@ jobs:
             git checkout --orphan release
           fi
           cd ..
+      - name: restore timestamps
+        uses: chetan/git-restore-mtime-action@v2
+        with:
+          working-directory: "deploy_temp"
       - name: Deploy to release branch
         run: |
           set -e -o pipefail
