--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13.6"
 dependencies = [
     "httpx[http2]>=0.28.1",
+    "jinja2>=3.1.6",
     "loguru>=0.7.3",
     "maxminddb>=2.8.2",
     "protobuf>=6.31.1",
